# ocma-data

./: .gitignore  .prettierignore  README.md  package-lock.json  pyproject.toml
.github/workflows/: deploy.yml  pytest.yml  ruff.yml
i18n/: el.json  ro.json
ocma_data/: __main__.py  constants.py
ocma_data/cli/: constants.py  main.py
ocma_data/core/date/: __main__.py  logic.py
ocma_data/core/fasting/: __main__.py  constants.py  logic.py
ocma_data/core/lectionary/: __main__.py  constants.py  logic.py
ocma_data/core/moon_phase/: __main__.py  constants.py  logic.py
ocma_data/core/pascha/: __main__.py  logic.py
ocma_data/core/pascha_distance/: __main__.py  logic.py
ocma_data/utils/: date_utils.py
public/: index.html
public/i18n/: el.json  en.json  ro.json  ru.json
tests/core/: test_date.py  test_fasting_season_01_new.py  test_fasting_season_01_old.py  test_fasting_season_02_new.py  test_fasting_season_02_old.py  test_fasting_season_03_new.py  test_fasting_season_03_old.py  test_fasting_season_04_new.py  test_fasting_season_04_old.py  test_fasting_season_05_new.py  test_fasting_season_05_old.py  test_fasting_season_06_new.py  test_fasting_season_06_old.py  test_fasting_season_07_new.py  test_fasting_season_07_old.py  test_fasting_season_08_new.py  test_fasting_season_08_old.py  test_fasting_season_09_new.py  test_fasting_season_09_old.py  test_fasting_season_10_new.py  test_fasting_season_10_old.py  test_fasting_season_11_new.py  test_fasting_season_11_old.py  test_moon_phase.py  test_pascha.py  test_pascha_distance.py  test_weekday.py
(+2 files in other folders)
