[project]
name = "ocma-data"
version = "0.7.16-alpha"
description = "JSON data for each liturgical day of the year"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.11.1"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = [
    "ARG", # unused arguments
    "B",   # bugbear
    "C90", # mccabe complexity
    "D",   # pydocstyle
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "RUF", # ruff-specific rules
    "SIM", # simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]
ignore = [
    "D203", # one-blank-line-before-class (conflicts with D211)
    "D211", # no-blank-line-before-class (conflicts with D203)
    "D213", # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
